@@ -1,8 +1,4 @@
-DIST tlp-0.3.3-r2-gentoo.tar.bz2 25271 RMD160 93dde12167c4034c3598b77c28ded81b17106218 SHA1 5919eae7486a1a9e66ce81939cc44b19365e5f80 SHA256 62c6971f6110129c35af8cc57f25653c6034594c7b445ad72087bf6a4b7f3a59
-DIST tlp-0.3.4-r1-gentoo.tar.bz2 25574 RMD160 b79013e04f34a5d37c319fcb799b2854d1ea7432 SHA1 de6a01b1a5899a0b6a2f5508a8b84ef03a9c5ae9 SHA256 3da0df465f4e648bd8595cf1bdf86b0af22f7d9522950bed92cb688344643ba7
 DIST tlp-0.3.6-r1-gentoo.tar.bz2 28314 RMD160 2e7ed42184dd79c2c503abd4e9ad78d7f03c7d3f SHA1 11c4ac6c59798b2fd0c2d8d73483d5776e976b8c SHA256 9996a42701d439474e89b9ef7b1d3714a8d876a1a287f14b23bf0d42efcff88e
-EBUILD tlp-0.3.3-r2.ebuild 436 RMD160 b5f9728ff42f2529696a3b1a65036a467e023c33 SHA1 892005dd881070581cd1d8bb02b325588156a93d SHA256 abfcd14a79fa18cf68bfe4761ab01d576fdcd40f2ee50cb3ccbed62f99d6b963
-EBUILD tlp-0.3.4-r1.ebuild 436 RMD160 b5f9728ff42f2529696a3b1a65036a467e023c33 SHA1 892005dd881070581cd1d8bb02b325588156a93d SHA256 abfcd14a79fa18cf68bfe4761ab01d576fdcd40f2ee50cb3ccbed62f99d6b963
 EBUILD tlp-0.3.6-r1.ebuild 3995 RMD160 9198f5d729453e1872c3a46999b9c0f3c341d31d SHA1 223d534bfe30bd656ee038660b9748d912ef0a6b SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798e97605bbe6942803d12f7d0
-MISC ChangeLog 2524 RMD160 58130a6e0875587bcdcf0da4a36f5cd3fa38870a SHA1 bf93b98147420ad8ec596a2f86fc612d4bfa009b SHA256 c0a6c230ed48d493f839d1cc29c6f5738a7c2e8397021e59015d7c582b0f1755
+MISC ChangeLog 2671 RMD160 bb9ff4b2b458d44431eeed1a9d0591d90a2cc2fd SHA1 0e20251eb9a028657944a16a5f9353fea8c277df SHA256 642efedacfb8bfae1186d2767ab2cf3dc0b4706744aaf58336409db76c46e694
 MISC metadata.xml 1960 RMD160 0eac0d5ecbea4d66062379b4e41d9dc1b836b081 SHA1 64d471234eff6052f6ba126d447bda0516de66b3 SHA256 270f8e2b23bb676ecaca567afe72f0f62194409cc2ffe5d5dcaa167975effc8d
