@@ -1,3 +1,1 @@
-# André  Erdmann <dywi@mailerd.de> (01 Jul 2012)
-# Removal in 14 days.
-<app-laptop/tlp-0.3.6-r1
+
